Implement companies and municipalities import (#48)

--- a/constants.ini
+++ b/constants.ini
@@ -4,8 +4,8 @@ RUUTER_PUBLIC=http://ruuter-public:8080
 
 RUUTER_PRIVATE=http://ruuter-private:8081
 
-DMAPPER=http://data-mapper:3000
+DMAPPER=http://dmapper:3000
 
-OPENSEARCH=http://opensearch-node:9200
+OPENSEARCH=http://opensearch:9200
 
 CRON_MANAGER=http://cron-manager:9010
