userTime -> userDate. modified parameter naming, update readme. started time-period.yml service

--- a/DSL/Ruuter.public/electricity/mock/highest-price.yml
+++ b/DSL/Ruuter.public/electricity/mock/highest-price.yml
@@ -11,9 +11,9 @@ declaration:
 
 prepareDates:
   assign:
-    userTime: ${incoming.params.userTime || new Date().toISOString().split('T')[0]}  # yyyy-mm-dd
-    startDateTime: ${new Date(new Date(userTime).getTime() - 24 * 60 * 60 * 1000).toISOString().split('T')[0] + "T21:00:00.000Z"}  # day before at 9am
-    endDateTime: ${userTime + "T20:59:59.000Z"}  # chosen date at 9pm - default time format
+    userDate: ${incoming.params.userDate || new Date().toISOString().split('T')[0]}  # yyyy-mm-dd
+    startDateTime: ${new Date(new Date(userDate).getTime() - 24 * 60 * 60 * 1000).toISOString().split('T')[0] + "T21:00:00.000Z"}  # day before at 9am
+    endDateTime: ${userDate + "T20:59:59.000Z"}  # chosen date at 9pm - default time format
   next: getPriceForPeriod
 
 getPriceForPeriod:
@@ -90,7 +90,7 @@ assignVariables:
   next: returnResult
 
 returnResult:
-  return: ${[userTime, timeVar, maxPrice]}
+  return: ${[userDate, timeVar, maxPrice]}
 
 # expected mock response
 # {
