changed contants.ini - RUUTER_PUBLIC to CHATBOT_RUUTER_PUBLIC_INTERNAL_CS

--- a/constants.ini
+++ b/constants.ini
@@ -1,6 +1,6 @@
 [DSL]
 
-RUUTER_PUBLIC=http://ruuter-public:8080
+CHATBOT_RUUTER_PUBLIC_INTERNAL_CS=http://ruuter-public:8080
 
 RUUTER_PRIVATE=http://ruuter-private:8081
 
