60 rest endpoint to retrieve national holidays in estonia (#159)
* refactored CS repo (#154) (#156) (#157)

* refactored CS repo

* added missing nationa-holiday service

* added missing national-holidays

* national-holidays documentation and electricity

* rename rahvalagatus to public-initiatives and moved initiatives-events-popular to legacy

* deleted national-holidays routing file - not needed

---------

Co-authored-by: Mati Kljukin <matik@matik-5420.ria.ee>

* 60 rest endpoint to retrieve national holidays in estonia (#158)

* refactored hbs/calendar directory

* minor refactor next steps

* update HB, refactor national-services

* HB for by-month service. refactored other sevices to use HB

* addede result formatting

* output formatting

* update readme and small refactor

* mock ytd service

* added mock services

--------

Co-authored-by: Mati Kljukin <matik@matik-5420.ria.ee>

--- a/DSL/Ruuter.public/GET/calendar/national-holidays/mock/eoy.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/mock/eoy.yml
@@ -1,18 +1,18 @@
 declaration:
   call: declare
   version: 0.1
-  name: "Find Upcoming Holiday"
+  name: "MOCK - Find Holidays Until End of Year"
   description: |
-    This service returns the next upcoming national holiday from today's date, using a mock API response of public holidays in 2024.
+    This mock service returns all holidays from today's date until the end of the year, based on a mock API response of 2024 public holidays.
   method: get
   params: []
   returns: json
 
 prepare:
   assign:
-    today: ${new Date(new Date().setDate(new Date().getDate() + 1)).toISOString().split("T")[0]}
+    today: "2024-10-10" #${new Date().toISOString().split("T")[0]}
+    yearEnd: ${today.split("-")[0] + "-12-31"}
   next: makeApiCall
-
 
 makeApiCall:
   call: reflect.mock
@@ -46,19 +46,24 @@ makeApiCall:
         - date: "2024-12-26"
           name: "teine jõulupüha"
   result: holiday_data
-  next: validateHoliday
+  next: validateHolidaysEOY
 
-validateHoliday:
+validateHolidaysEOY:
   assign:
-    upcomingHoliday: ${holiday_data.response.body.holidays
-        .filter(holiday => holiday.date >= today).sort((a, b) => new Date(a.date) - new Date(b.date))[0]}
-  next: formatValue
+    holidaysEOY: ${holiday_data.response.body.holidays
+        .filter(holiday => holiday.date >= today && holiday.date <= yearEnd)
+        .sort((a, b) => new Date(a.date) - new Date(b.date))}
+  next: formatResult
 
-formatValue:
-  assign:
-    upcomingHoliday:
-      result: "Tulev riigipüha on ${upcomingHoliday.name} - ${upcomingHoliday.date}"
+formatResult:
+  call: reflect.mock
+  args:
+    url: "[#DMAPPER]/hbs/calendar/national-holidays/get_national_holiday_eoy"
+    response:
+      result: "Kõik riigipühad alates tänsest kuni aasta lõpuni on: \n*2024-12-24\n jõululaupäev\n\n *2024-12-25\n esimene jõulupüha\n\n *2024-12-26\n teine jõulupüha\n\n"
+  result: formattedHolidays
   next: returnValue
 
 returnValue:
-  return: "${upcomingHoliday}"
+  return: ${formattedHolidays.response.body}
+  next: end
