--- a/DSL/Ruuter.public/GET/calendar/national-holidays/mock/find/by-name.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/mock/find/by-name.yml
@@ -1,25 +1,25 @@
 declaration:
   call: declare
   version: 0.1
-  name: "Check Today's Holiday"
-  description: |
-    This service checks if today is a national holiday based on a mocked API response.
+  name: "MOCK - Holiday Search Service"
+  description: "Searches for a national holiday by name in the 2024 calendar"
   method: get
-  params: []
   returns: json
 
 prepare:
+  # Assign incoming 'name' parameter to 'searchTerm'
   assign:
-    today: ${new Date().toISOString().split("T")[0]}
+    searchTerm: "${incoming.params.name || 'uusaasta'}" # default to 'uusaasta'
   next: makeApiCall
 
 makeApiCall:
+  # Mock API call returning 2024 holidays
   call: reflect.mock
   args:
     url: "www.example.com"
     response: 
       holidays:
-        # --- Riigipühad ja puhkepäevad 2024 ---
+        # List of holidays
         - date: "2024-01-01"
           name: "uusaasta"
         - date: "2024-02-24"
@@ -45,35 +45,41 @@ makeApiCall:
         - date: "2024-12-26"
           name: "teine jõulupüha"
   result: holidayData
-  next: validateHoliday
+  next: filterHolidaysByName
 
-validateHoliday:
+filterHolidaysByName:
+  # Filter holidays by 'searchTerm'
   assign:
-    holiday: ${holidayData.response.body.holidays.find(holiday => holiday.date === today)}
+    filteredHolidays: ${holidayData.response.body.holidays.filter(holiday => holiday.name.toLowerCase().includes(searchTerm.toLowerCase()))}
   next: checkHoliday
 
 checkHoliday:
+  # Check if no holidays match
   switch:
-    - condition: ${!holiday}
+    - condition: ${filteredHolidays.length < 1}
       next: holidayNotFound
   next: formatValue
 
 formatValue:
+  # Capitalize and format result
   assign:
     holiday:
-      result: "Täna on ${holiday.name}"
+      result: "${filteredHolidays[0].name.charAt(0).toUpperCase() + filteredHolidays[0].name.slice(1)} on ${filteredHolidays[0].date}"
   next: returnValue
 
 returnValue:
+  # Return holiday result
   return: ${holiday}
   next: end
-# -------------------------------------------------- 
+
 holidayNotFound:
+  # Default message if no holiday found
   assign:
     noHoliday:
-      result: "Täna ei ole riigpüha."
-  next: returnNoValue
+      result: "Ei leia sellist riigipüha"
+  next: returnNoValue 
 
 returnNoValue:
+  # Return no-holiday message
   return: ${noHoliday}
   next: end
