--- a/DSL/Ruuter.public/GET/calendar/national-holidays/mock/previous.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/mock/previous.yml
@@ -1,18 +1,17 @@
 declaration:
   call: declare
   version: 0.1
-  name: "Find Upcoming Holiday"
+  name: "MOCK - Find Previous Holiday"
   description: |
-    This service returns the next upcoming national holiday from today's date, using a mock API response of public holidays in 2024.
+    This mock service returns the most recent national holiday before today's date, using a mock API response of public holidays in 2024.
   method: get
   params: []
   returns: json
 
 prepare:
   assign:
-    today: ${new Date(new Date().setDate(new Date().getDate() + 1)).toISOString().split("T")[0]}
+    today: "2024-02-24" #${new Date().toISOString().split("T")[0]}
   next: makeApiCall
-
 
 makeApiCall:
   call: reflect.mock
@@ -36,7 +35,7 @@ makeApiCall:
         - date: "2024-06-23"
           name: "võidupüha"
         - date: "2024-06-24"
-          name: "jaanipäev"
+          name: "jaanipäev" 
         - date: "2024-08-20"
           name: "taasiseseisvumispäev"
         - date: "2024-12-24"
@@ -50,15 +49,16 @@ makeApiCall:
 
 validateHoliday:
   assign:
-    upcomingHoliday: ${holiday_data.response.body.holidays
-        .filter(holiday => holiday.date >= today).sort((a, b) => new Date(a.date) - new Date(b.date))[0]}
+    previousHoliday: ${holiday_data.response.body.holidays
+        .filter(holiday => holiday.date < today).sort((a, b) => new Date(b.date) - new Date(a.date))[0]}
   next: formatValue
 
 formatValue:
   assign:
-    upcomingHoliday:
-      result: "Tulev riigipüha on ${upcomingHoliday.name} - ${upcomingHoliday.date}"
+    previousHoliday:
+      result: "Viimane riigipüha oli ${previousHoliday.name} - ${previousHoliday.date}"
   next: returnValue
 
 returnValue:
-  return: "${upcomingHoliday}"
+  return: "${previousHoliday}"
+  next: end
