dm format step rupdate (#161)
* update riigikogu readme

* update DM call

* added last format message step, specified DM path

* format Step refactor

---------

Co-authored-by: Mati Kljukin <matik@matik-5420.ria.ee>

--- a/DSL/Ruuter.public/GET/calendar/national-holidays/next.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/next.yml
@@ -56,9 +56,27 @@ validateHoliday:
 
 formatValue:
   assign:
-    upcomingHoliday:
-      result: "Tulev riigipüha on ${upcomingHoliday.name} - ${upcomingHoliday.date}"
-  next: returnValue
+    res: "Tulev riigipüha on ${upcomingHoliday.name} - ${upcomingHoliday.date}"
+  next: formatMessages
 
-returnValue:
-  return: "${upcomingHoliday}"
+formatMessages:
+  call: http.post
+  args:
+    url: "[#DMAPPER]/common-services/hbs/bot_responses_to_messages"
+    headers:
+      type: json
+    body:
+      data:
+        {
+          "botMessages": "${[res]}",
+          "chatId": "${chatId}",
+          "authorId": "${authorId}",
+          "authorFirstName": "",
+          "authorLastName": "",
+          "authorTimestamp": "${new Date().toISOString()}",
+          "created": "${new Date().toISOString()}",
+        }
+  result: formatMessage
+
+return_result:
+  return: ${formatMessage.response.body}
