--- a/DSL/Ruuter.public/GET/calendar/national-holidays/find/by-month.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/find/by-month.yml
@@ -54,40 +54,56 @@ checkHolidays:
   switch:
     - condition: ${filteredHolidays.length < 1}
       next: holidayNotFound
+    - condition: ${filteredHolidays.length === 1}
+      next: assignSingleValue
     - condition: ${filteredHolidays.length > 1}
       next: formatValue
-    - condition: ${filteredHolidays.length === 1}
-      next: assignValue
 
-assignValue:
-  assign:
-    holiday:
-      result: "Antud kuus on ${filteredHolidays[0].name} - ${filteredHolidays[0].date}"
-  next: returnValue
-
-formatValue:
-  requestType: post
-  template: "[#DMAPPER]/hbs/calendar/national-holidays/get_national_holiday_by_month"
-  body:
-    filteredHolidays: ${filteredHolidays}
-  result: holiday
-  next: returnDMValue
-
-returnValue:
-  return: ${holiday.result}
-  next: end
-
-returnDMValue:
-  return: ${holiday.result}
-  next: end
-
-#--------------------------------
 holidayNotFound:
   assign:
-    noHoliday:
-      result: "Ei leia riigipühi antud kuus"
-  next: returnNoHolidays
+    res: "Ei leia riigipühi antud kuus"
+  next: formatMessages
 
-returnNoHolidays:
-  return: ${noHoliday}
+assignSingleValue:
+  assign:
+    res: "Antud kuus on ${filteredHolidays[0].name} - ${filteredHolidays[0].date}"
+  next: formatMessages
+
+formatValue:
+  call: http.post
+  args:
+    url: "[#DMAPPER]/common-services//hbs/calendar/national-holidays/get_national_holiday_by_month"
+    body:
+      data: ${filteredHolidays}
+  result: holiday
+  next: assignResponse
+
+assignResponse:
+  assign:
+    res: ${holiday.response.body}
+  next: formatMessages
+
+# format throgh DM bot response to messages
+formatMessages:
+  call: http.post
+  args:
+    url: "[#DMAPPER]/common-services/hbs/bot_responses_to_messages"
+    headers:
+      type: json
+    body:
+      data:
+        {
+          "botMessages": "${[res]}",
+          "chatId": "${chatId}",
+          "authorId": "${authorId}",
+          "authorFirstName": "",
+          "authorLastName": "",
+          "authorTimestamp": "${new Date().toISOString()}",
+          "created": "${new Date().toISOString()}",
+        }
+  result: formatMessage
+  next: return_result
+
+return_result:
+  return: ${formatMessage.response.body}
   next: end
