--- a/DSL/Ruuter.public/GET/calendar/national-holidays/previous.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/previous.yml
@@ -56,10 +56,27 @@ validateHoliday:
 
 formatValue:
   assign:
-    previousHoliday:
-      result: "Viimane riigipüha oli ${previousHoliday.name} - ${previousHoliday.date}"
-  next: returnValue
+    res: "Viimane riigipüha oli ${previousHoliday.name} - ${previousHoliday.date}"
+  next: formatMessages
 
-returnValue:
-  return: "${previousHoliday}"
-  next: end
+formatMessages:
+  call: http.post
+  args:
+    url: "[#DMAPPER]/common-services/hbs/bot_responses_to_messages"
+    headers:
+      type: json
+    body:
+      data:
+        {
+          "botMessages": "${[res]}",
+          "chatId": "${chatId}",
+          "authorId": "${authorId}",
+          "authorFirstName": "",
+          "authorLastName": "",
+          "authorTimestamp": "${new Date().toISOString()}",
+          "created": "${new Date().toISOString()}",
+        }
+  result: formatMessage
+
+return_result:
+  return: ${formatMessage.response.body}
