--- a/DSL/Ruuter.public/GET/calendar/national-holidays/today.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/today.yml
@@ -58,22 +58,34 @@ checkHoliday:
       next: holidayNotFound
   next: formatValue
 
-formatValue:
-  assign:
-    holiday:
-      result: "Täna on ${holiday.name}"
-  next: returnValue
-
-returnValue:
-  return: ${holiday}
-  next: end
-# -------------------------------------------------- 
 holidayNotFound:
   assign:
-    noHoliday:
-      result: "Täna ei ole riigpüha."
-  next: returnNoValue
+    res: "Täna ei ole riigpüha."
+  next: formatMessages
 
-returnNoValue:
-  return: ${noHoliday}
-  next: end
+formatValue:
+  assign:
+    res: "Täna on ${holiday.name}"
+  next: formatMessages
+
+formatMessages:
+  call: http.post
+  args:
+    url: "[#DMAPPER]/common-services/hbs/bot_responses_to_messages"
+    headers:
+      type: json
+    body:
+      data:
+        {
+          "botMessages": "${[res]}",
+          "chatId": "${chatId}",
+          "authorId": "${authorId}",
+          "authorFirstName": "",
+          "authorLastName": "",
+          "authorTimestamp": "${new Date().toISOString()}",
+          "created": "${new Date().toISOString()}",
+        }
+  result: formatMessage
+
+return_result:
+  return: ${formatMessage.response.body}
